# LangVAE

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py
docs/: api.rst  conf.py  index.rst  quick_start.rst  requirements.txt  usage.rst
docs/langvae/: langvae.encoders.rst  langvae.pipelines.rst  langvae.trainers.rst  modules.rst
docs/source/: langvae.arch.rst  langvae.data_conversion.rst  langvae.decoders.rst  langvae.rst
examples/: def_cvae.py  def_vae.py  def_wae.py  supervised_def_cvae.py  supervised_def_vae.py
langvae/: __init__.py
langvae/arch/: cvae.py  vae.py  wae.py
langvae/data_conversion/: sparse.py  tokenization.py
langvae/decoders/: __init__.py  sentence.py  sentence_annotated.py
langvae/encoders/: __init__.py  automodel_presets.py  sentence.py  sentence_annotated.py
langvae/pipelines/: __init__.py  lang_training.py
langvae/trainers/: __init__.py  cyclical_schedule_kl.py  training_callbacks.py
